# SamEncrypt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: format-and-lint.yml  rust.yml
api/: .gitignore  Cargo.toml  cargo.toml  publish.sh  run_tests.sh
api/src/: core.rs  curve.rs  elliptic_curve.rs  hashing.rs  internals.rs  lib.rs  sha256.rs  test_utils.rs
api/tests/: integration_tests.rs
cli-se-pre/: .gitignore  Cargo.toml  install_cli.sh
cli-se-pre/src/: cli.rs  main.rs
cli_sam/src/: cli.rs  main.rs
e2e-benchmarks/: .gitignore  Cargo.toml
