[package]
name = "se_pre_scheme"
version = "0.1.0"
authors = [
    "Blaise Munyampirwa <blaise@sam17.co>",
    "Roberto Berwa <berwa@sam17.co>"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]


[dependencies]
sha2 = { version = "0.10.2" }
anyhow = { version = "1.0.61" }
hex = { version = "0.*"}
cipher = { version = "0.*" }
curv-kzen = { version = "0.9.0" }
serde = { version = "1.0.144" }
futures = {version = "0.3.24" }

# [[bench]]
# name = "bench"
# harness = false

[profile.release]
opt-level = 3
strip = true
lto = true
# debug = true
