[package]
name = "sam_encrypt"
version = "0.1.0"
authors = [
    "Blaise Munyampirwa <blaise@sam17.co>",
    "Roberto Berwa <berwa@sam17.co>"
]
description = "A crate that provides a set of cryptographic primitives for building a proxy self re-encryption scheme."
license = "Apache2.0"
categories = ["cryptography"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]


[dev-dependencies]
criterion = { version = "0.4.0" }


[dependencies]
sha2 = { version = "0.10.2" }
anyhow = { version = "1.0.61" }
hex = { version = "0.*"}
cipher = { version = "0.*" }
curv-kzen = { version = "0.9.0" }
futures = { version = "0.3.24" }
aes-gcm-siv = { version = "0.11.1" }
lazy_static = { version = "1.4.0" }
rand = { version = "0.8.5" }
serde = { version = "1.0.144", features=["derive"] }
serde_cbor = { version = "0.11.2" }


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug-assertions = false
strip = true
lto = true
