[package]
name = "sam"
version = "0.1.0"
authors = [
    "Blaise Munyampirwa <blaise@sam17.co>",
    "Roberto Berwa <berwa@sam17.co>"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
# sam_encrypt = {path = "../api" }
# curv-kzen = { version = "0.9.0" }
clap = { version = "4.0.11", features = ["derive"]}