[package]
name = "e2e-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam_encrypt = { path = "../api" }

[dev-dependencies]
criterion = { version = "0.4.0" }


# [[bench]]
# name = "self_encrypt_benchmark"
# harness = false